# Trawler-mcp

./: .env.example  .gitignore  .mcp.json  CONTEXT.md  Dockerfile  README.md  creative-proposal.html  pyproject.toml  设计宪法.md
docs/: 00_项目总览.md  01_ARCHITECTURE.md  01_架构设计.md  02_CORE_IMPLEMENTATION.md  02_核心实现.md  03_CODEBASE_GUIDE.md  03_代码库导览.md  04_SAFETY_AND_COMPONENTS.md  04_安全与组件.md  08_演进路线图.md  ACCOUNT_PROFILE_REGISTRY.md  ARCHITECTURE.md  ENHANCEMENT_ROADMAP.md  IMPLEMENTATION_DETAILS.md  PROJECT_OVERVIEW.md  SECURE_DEPLOYMENT_ARCHITECTURE.md  SITE_INTELLIGENCE_PROFILE.md
examples/: 4seas_居住项目样例.md  4seas_抓取过程样例.md  4seas_首页样例.md
scripts/: Capture-TraeDialog.ps1  Prepare-CompetitionScreenshots.ps1  e2e_stress_test.py  login.py
tests/: conftest.py  test_account_profiles.py  test_agent_features.py  test_artifacts.py  test_atomic_write.py  test_browser_adapter.py  test_browser_session.py  test_concurrency.py  test_content_adapter.py  test_crawl_budget.py  test_crawl_policy.py  test_crawl_site.py  test_curlcffi_session.py  test_detect.py  test_error_contract.py  test_fit_markdown.py  test_frontier.py  test_hitl_display.py  test_hitl_rung.py  test_indexed_crawl.py  test_jina_rung.py  test_link_map.py  test_live_browser.py  test_load.py  test_local_integration.py  test_markdown_corpus.py  test_oom_parser.py  test_page_retrieval.py  test_patchright_rung.py  test_policy.py  test_prompt_audit.py  test_proxy_pool.py  test_quality.py  test_raw_metadata.py  test_raw_modes.py  test_retrieval_readiness.py  test_robots.py  test_safety.py  test_selectors.py  test_server_tools.py  (+5 more)
trawler/: __init__.py  __main__.py  account_profiles.py  account_vault.py  artifacts.py  atomic.py  audit.py  auth.py  browser_adapter.py  browser_session.py  config.py  crawl_budget.py  crawl_policy.py  crawl_site.py  crawl_url.py  db.py  db_writer.py  errors.py  frontier.py  jobs.py  keyword_rules.py  lifecycle.py  (+20 more)
(+20 files in other folders)
