[project]
name = "trawler-mcp"
version = "0.1.0"
description = "Trawler - 纯爬虫薄壳 MCP server (零 LLM)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Trawler" }]
dependencies = [
    "mcp>=1.27,<2",
    "httpx~=0.28.1",
    "html2text~=2024.2.26",
    "python-dotenv~=1.0.0",
    "beautifulsoup4~=4.12.0",
    "pyyaml~=6.0",
    "psutil~=6.1.0",
    "python-json-logger~=3.2.1",
    "cryptography>=49.0.0",
    "curl_cffi>=0.7.0,<1",
    "tenacity>=8.2.0,<10",
    "extruct>=0.16.0",
    "uvloop>=0.21.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
heavy = [
    "patchright>=1.59.1",
    "playwright>=1.48.0",
    "trafilatura>=2.0.0,<3",
    "readability-lxml>=0.8.1",
    "markdownify>=1.0.0",
    "browserforge>=1.2.0,<2",
]
otel = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]
auth = [
    "PyJWT>=2.8.0",
    "httpx>=0.28.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
trawler = "trawler.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trawler"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501 (行太长) 在测试里放宽 — 测试常含长 SQL/断言字符串
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"trawler/server.py" = ["E501"]
"trawler/raw_store.py" = ["E501"]
"trawler/atomic.py" = ["E501"]
"trawler/fetcher/*.py" = ["E501"]
"trawler/lifecycle.py" = ["E501"]
"trawler/crawl_url.py" = ["E501"]
"trawler/crawl_site.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
timeout = 30
timeout_method = "thread"
